--- a/bashrc/bash.rc
+++ b/bashrc/bash.rc
@@ -1,5 +1,9 @@
 # source my own environment
 
+# if not running interactively, don't do anything
+[ -z "$PS1" ] && return
+
+
 echo -e "\n========== install my own environment ==========\n"
 
 
